@@ -116,3 +116,4 @@
 17-Sep-2021  - V1.25 Add explicit test for gzip compression in IoUtil.__deserializeXML()
 17-Sep-2021  - V1.26 Fix protocol issue in remote FileUtil.exists() and size() methods
 20-Sep-2021  - V1.27 Suppress logging of protocol errors in FileUtil()
+21-Sep-2021  - V1.28 Protect against missing response headers in FileUtil.exists() and size() methods
